Styling: Added media query to display flash messages correctly on mobile devices.

--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -260,4 +260,15 @@ body {
 .autocomplete-item .goes-to {
   float: left;
   margin: 0 10px;
+
+@media (max-width: 480px) {
+  #messages {
+    width: 300px;
+  }
+
+  .alert {
+    width: 55%;
+    margin: 0 auto;
+    padding-right: 25px;
+  }
 }
